# teleop_strategies

./: CMakeLists.txt  LICENSE  README.md  package.xml
launch/: phantom_master_udp_pose_receive.launch  phantom_udp_pose_send.launch
scripts/: receive_udp_pose.py  send_udp_pose.py
teleop_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
teleop_msgs/msg/: Button2.msg  Button5.msg
teleop_strategies_controller/: CMakeLists.txt  package.xml
teleop_strategies_controller/config/: bubble_rate_pos.yaml  phantomL_justinL.rviz  phantomL_justinL.yaml  phantom_kraft.rviz  phantom_kraft.yaml
teleop_strategies_controller/launch/: master_phantom_udp.launch  phantomL_justinL.launch  phantom_kraft.launch  phantom_master_udp_pose_receive.launch  phantom_udp_pose_send.launch  state_machine_controller.launch  udp_phantomL_justinL.launch  udp_phantom_kraft.launch
teleop_strategies_controller/scripts/: UDP_receive_info.py  UDP_send_info.py  button_handler.py  force_handler.py  hybrid_controller.py  receive_udp_info.py  receive_udp_pose.py  send_udp_info.py  state_machine.py
