<?xml version="1.0"?>
<package>
  <name>teleop_strategies_controller</name>
  <description>The teleop_strategies_controller package</description>

  <version>0.1.0</version>
  <maintainer email="l.rubiorod@gmail.com">Luis E. Rubio Rodriguez</maintainer>
  <license>BSD</license>
  <url type="website">https://github.com/lrubior88/teleop_strategies_controller</url>
  <url type="repository">https://github.com/lrubior88/teleop_strategies_controller</url>
  <author>Luis E. Rubio Rodriguez</author>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>omni_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>
  
  <run_depend>smach</run_depend>
  <run_depend>smach_ros</run_depend>
  <run_depend>omni_msgs</run_depend>
  <run_depend>visualization_msgs</run_depend>

</package>
