<?xml version="1.0"?>
<package>
  <name>teleop_msgs</name>
  <description>The teleop_msgs package</description>

  <version>0.1.0</version>
  <maintainer email="l.rubiorod@gmail.com">Luis E. Rubio Rodriguez</maintainer>
  <license>BSD</license>
  <url type="website">https://github.com/lrubior88/teleop_strategies_controller</url>
  <url type="repository">https://github.com/lrubior88/teleop_strategies_controller</url>
  <author>Luis E. Rubio Rodriguez</author>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <build_depend>message_generation</build_depend>
  <run_depend>message_runtime</run_depend>
  
</package>
